# rust-demo-dependency-injection

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  build.yml  ci.yml  deploy.yml
src/: args.rs  config.rs  init.rs  main.rs
src/tasks/: dynamo_service.rs  http.rs  inputs.rs  mod.rs  model.rs  service.rs
src/tasks/service/: database.rs  dynamo.rs  mod.rs
src/utils/: mod.rs  update.rs
