[package]
name = "rust-demo-dependency-injection"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "A demo project showing dependency injection approaches"
homepage = "https://github.com/bkonkle/rust-demo-dependency-injection"
repository = "https://github.com/bkonkle/rust-demo-dependency-injection"
license = "MIT"

publish = false # TODO: Remove when ready to publish

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-sdk-dynamodb = "1.23.0"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.19", features = ["serde"] }
derive-new = "0.6.0"
log = "0.4"
nakago = "0.19"
nakago-axum = "0.19"
nakago-sea-orm = "0.19"
pico-args = "0.5.0"
pretty_env_logger = "0.5"
sea-orm = { version = "0.12", features = [
    "macros",
    "mock",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ulid = "1.1.2"

[dev-dependencies]
criterion = "0.5"
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
mockall = "0.11"
pretty_assertions = "1.2"
